--- a/app/templates/admin/index.html
+++ b/app/templates/admin/index.html
@@ -116,18 +116,19 @@
                     <div class="row">
                         <div class="col-md-3">
                             <div class="panel panel-primary">
-                                <div class="panel-heading">Reports Parser</div>
+                                <div class="panel-heading">Financial Data Miner</div>
                                 <div class="panel-body">
-                                    <p>Search reports for financial data. Requires pdf file.</p>
-                                    <a href="{{ url_for('dbmd_tools.report_uploader') }}">Run</a>
+                                    <p>Extract financial data from given source.</p>
+                                    <a href="{{ url_for('dbmd_tools.miner_index') }}">Open</a>
                                 </div>
                             </div>
                         </div>
                         <div class="col-md-3">
                             <div class="panel panel-primary">
-                                <div class="panel-heading">Massive Uploader</div>
+                                <div class="panel-heading">Batch Uploader</div>
                                 <div class="panel-body">
-                                    Bla Bla
+                                    <p>Enable to upload financial data in convienent way.</p>
+                                    <a href="#">Open</a>
                                 </div>
                             </div>
                         </div>
