--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,6 +1,7 @@
+{% import 'admin/layout.html' as layout with context -%}
+
 <!DOCTYPE html>
 <html lang="en">
-
 
 <head>
   <meta charset="utf-8">
@@ -25,7 +26,14 @@
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
   <![endif]-->
   <style>
-    body { padding-top: 80px; }
+    /*body { padding-top: 80px; }*/
+    body {
+  min-height: 2000px;
+}
+
+.navbar-static-top {
+  margin-bottom: 19px;
+}
   </style>
   {% block head_css %}{% endblock %}
   {% block head %}{% endblock %}
@@ -35,40 +43,44 @@
 </head>
 
 <body>
-  <div class="container">
-    <nav class="navbar navbar-inverse navbar-fixed-top topnav" role="navigation">
-        <div class="container topnav">
-          <div class="navbar-header">
-              <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                  <span class="sr-only">Toggle navigation</span>
-                  <span class="icon-bar"></span>
-                  <span class="icon-bar"></span>
-                  <span class="icon-bar"></span>
-              </button>
-              <a class="navbar-brand topnav" href="{{ url_for('home.homepage') }}">Open Stock</a>
-          </div>
-
-          <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav">
-              <li><a href="#">Analyses</a></li>
-              {% if current_user.is_authenticated %}
-                  <li><a href="{{ url_for('admin.index') }}">Database</a></li>
-                  <li><a href="#">Analytics</a></li>
-                  <li><a href="#">Portfolio</a></li>
-              {% endif %}
-            </ul>
-            <ul class="nav navbar-nav navbar-right">
-              {% if current_user.is_authenticated %}
-                <li><a href="{{ url_for('user.logout') }}">Logout</a></li>
-                <li><a href="#"><i class="fa fa-user"></i>  {{ current_user.name }}</a></li>
-              {% else %}
-                <li><a href="{{ url_for('user.register') }}">Register</a></li>
-                <li><a href="{{ url_for('user.login') }}">Login</a></li>
-              {% endif %}
-            </ul>
-          </div>
+  <nav class="navbar navbar-default navbar-static-top" role="navigation">
+      <div class="container topnav">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand topnav" href="{{ url_for('home.homepage') }}">Open Stock</a>
         </div>
-    </nav>
+
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <ul class="nav navbar-nav">
+            <li><a href="#">Analyses</a></li>
+            {% if current_user.is_authenticated %}
+                <li><a href="{{ url_for('admin.index') }}">Database</a></li>
+                <li><a href="#">Analytics</a></li>
+                <li><a href="#">Portfolio</a></li>
+            {% endif %}
+          </ul>
+          <ul class="nav navbar-nav navbar-right">
+            {% if current_user.is_authenticated %}
+              <li><a href="{{ url_for('user.logout') }}">Logout</a></li>
+              <li><a href="#"><i class="fa fa-user"></i>  {{ current_user.name }}</a></li>
+            {% else %}
+              <li><a href="{{ url_for('user.register') }}">Register</a></li>
+              <li><a href="{{ url_for('user.login') }}">Login</a></li>
+            {% endif %}
+          </ul>
+        </div>
+      </div>
+  </nav>
+
+  <div class="container">
+    {% block messages %}
+    {{ layout.messages() }}
+    {% endblock %}
   </div>
 
   {% block page_body %}
