--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -27,13 +27,9 @@
   <![endif]-->
   <style>
     /*body { padding-top: 80px; }*/
-    body {
-  min-height: 2000px;
-}
-
-.navbar-static-top {
-  margin-bottom: 19px;
-}
+    .navbar-static-top {
+      margin-bottom: 19px;
+    }
   </style>
   {% block head_css %}{% endblock %}
   {% block head %}{% endblock %}
@@ -46,7 +42,7 @@
   <nav class="navbar navbar-default navbar-static-top" role="navigation">
       <div class="container topnav">
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse-1">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
@@ -55,7 +51,7 @@
             <a class="navbar-brand topnav" href="{{ url_for('home.homepage') }}">Open Stock</a>
         </div>
 
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <div class="collapse navbar-collapse" id="navbar-collapse-1">
           <ul class="nav navbar-nav">
             <li><a href="#">Analyses</a></li>
             {% if current_user.is_authenticated %}
