--- a/app/templates/admin/index.html
+++ b/app/templates/admin/index.html
@@ -38,7 +38,8 @@
                                 <div class="panel-body">
                                     <ul>
                                         <li><a href="{{ url_for('record.index_view') }}">Records</a></li>
-                                        <li><a href="{{ url_for('recordtype.index_view') }}">Records Types</a></li>
+                                        <li><a href="{{ url_for('recordtype.index_view') }}">Record Types</a></li>
+                                        <li><a href="{{ url_for('financialstatementtype.index_view') }}">Financial Statement Types</a></li>
                                         <li><a href="{{ url_for('report.index_view') }}">Reports</a></li>
                                     </ul>
                                 </div>
